--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <script src="JSCode/EnemyClasses/FlyingEnemy.js"></script>
     <script src="JSCode/Factories/EnemyFactory.js"></script>
     <script src="JSCode/Factories/BlockFactory.js"></script>
-    <script src="JSCode/ActorClass/ActorClass.js"></script>
+    <script src="JSCode/Actor/Bullet.js"></script>
+    <script src="JSCode/Actor/ActorClass.js"></script>
     <script src="JSCode/Managers/PhysicsManager.js"></script>
     <script src="JSCode/Managers/MapManager.js"></script>
     <script src="JSCode/Managers/CollisionManager.js"></script>
