--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Doodle Jump</title>
-    <link href='styles/indexStyle.css', rel='stylesheet'>
+    <link href='styles/MainStyle.css', rel='stylesheet'>
+    <link href='styles/GameScoreStyle.css', rel='stylesheet'>
+    <link href='styles/HighScoreTableStyle.css', rel='stylesheet'>
     <link rel="icon" type="image/x-icon" href="images/Actor/ActorLeft.png">
 </head>
 <body>
     <div id="gameScore">
         Score: <span id="score"></span>
+    </div>
+    <div id="highScoreTableDiv" style="visibility: hidden">
+        <span> KEKES </span>
+        <div id="highScoreTableOl">
+        </div>
     </div>
     <canvas id="canvas"></canvas>
     <script src="JSCode/BlockClasses/BaseBlock.js"></script>
@@ -16,10 +23,17 @@
     <script src="JSCode/BlockClasses/XMoveBlock.js"></script>
     <script src="JSCode/EnemyClasses/BaseEnemy.js"></script>
     <script src="JSCode/EnemyClasses/FlyingEnemy.js"></script>
+    <script src="JSCode/EnemyClasses/BigEnemy.js"></script>
+    <script src="JSCode/GameUnitCLasses/BaseGameUnit.js"></script>
+    <script src="JSCode/GameUnitCLasses/Portal.js"></script>
+    <script src="JSCode/GameUnitCLasses/Spring.js"></script>
     <script src="JSCode/Factories/EnemyFactory.js"></script>
     <script src="JSCode/Factories/BlockFactory.js"></script>
+    <script src="JSCode/Factories/GameUnitFactory.js"></script>
     <script src="JSCode/Actor/Bullet.js"></script>
     <script src="JSCode/Actor/ActorClass.js"></script>
+    <script src="JSCode/Managers/SoundManager.js"></script>
+    <script src="JSCode/Managers/HighScoreTableManager.js"></script>
     <script src="JSCode/Managers/PhysicsManager.js"></script>
     <script src="JSCode/Managers/MapManager.js"></script>
     <script src="JSCode/Managers/CollisionManager.js"></script>
